[gd_scene load_steps=10 format=3 uid="uid://ciwfys7lyonhp"]

[ext_resource type="PackedScene" uid="uid://bnw7kac1c16fp" path="res://Scenes/Entities/entities.tscn" id="1_m144i"]
[ext_resource type="Texture2D" uid="uid://nce7kn7ccdgc" path="res://mystic_woods_free_2.2/sprites/characters/slime.png" id="2_33x3w"]
[ext_resource type="Script" path="res://Scenes/Entities/slime.gd" id="2_gfyfc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_46yif"]
radius = 6.08276

[sub_resource type="Animation" id="Animation_s1c4v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_252sd"]
resource_name = "slime_death"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 88, 89]
}

[sub_resource type="Animation" id="Animation_8y4b1"]
resource_name = "slime_idle"
length = 1.00003
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_14wt4"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, 100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5irdr"]
_data = {
"RESET": SubResource("Animation_s1c4v"),
"slime_death": SubResource("Animation_252sd"),
"slime_idle": SubResource("Animation_8y4b1"),
"spawn": SubResource("Animation_14wt4")
}

[node name="slime" groups=["Enemy"] instance=ExtResource("1_m144i")]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 2
collision_mask = 3
script = ExtResource("2_gfyfc")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_46yif")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(0, -2)
texture = ExtResource("2_33x3w")
hframes = 7
vframes = 13

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_5irdr")
}

[node name="ProgressBar" type="ProgressBar" parent="." index="3"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.5
offset_right = 4.0
offset_bottom = 13.5
grow_vertical = 2
scale = Vector2(0.5, 0.5)
tooltip_text = "
"
max_value = 30.0

[node name="Invulnerability" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Invulnerability" to="." method="_on_invulnerability_timeout"]
